--- a/BigProject/docker-compose.yml
+++ b/BigProject/docker-compose.yml
@@ -26,35 +26,29 @@ networks:
 
 
 services:
-  bigproject:
-    image: docker.io/library/bigproject
+  web-api:
     depends_on:
-        - "app_db"
-    container_name: bigproject-services
+      - "postgres"
+    container_name: web-api
     ports:
-        - "8088:80"
+      - "8088:80"
     build:
       context: .
       dockerfile: Dockerfile
     environment:
-        - ConnectionStrings__DefaultConnection=User ID=postgres;Password=postgres;Server=app_db;Port=5432;Database=BigProjectDriver; IntegratedSecurity=true;Pooling=true;
-        - ASPNETCORE_URLS=http://+:80
+      - DefaultConnection=Server=postgres;Port=5432;Database=BigProjectDb;User ID=postgres;Password=postgres;IntegratedSecurity=true;Pooling=true;
     networks:
-        - dev
-
-  app_db:
-     image: postgres:latest
-     container_name: app_db
-     environment:
-         - POSTGRES_USER=postgres
-         - POSTGRES_PASSWORD=postgres
-         - POSTGRES_DB=BigProjectDriver
-     ports:
-         - "5433:5432"
-     restart: always 
-     volumes:
-         - app_data:/var/lib/postgresql/data
-     networks:
-         - dev
-volumes:
-    app_data:
+      - dev
+  
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=BigProjectDb
+    restart: always
+    volumes:
+      - ./app_data:/var/lib/postgresql/data
+    networks:
+      - dev
