--- a/BigProject/docker-compose.yml
+++ b/BigProject/docker-compose.yml
@@ -33,15 +33,28 @@ services:
     ports:
       - "8088:80"
     build:
-      context: .
+      context: ./BigProject
       dockerfile: Dockerfile
     environment:
       - DefaultConnection=Server=postgres;Port=5432;Database=BigProjectDb;User ID=postgres;Password=postgres;IntegratedSecurity=true;Pooling=true;
     networks:
       - dev
-  
+
+  front-end:
+    container_name: front-end
+    ports:
+      - "8089:3000"
+    build:
+      context: ./react-app
+      dockerfile: Dockerfile
+    volumes:
+      - ./react-app:/app
+      - /app/node_modules
+
   postgres:
     image: postgres:latest
+    ports:
+      - "5432:5432"
     container_name: postgres
     environment:
       - POSTGRES_USER=postgres
@@ -49,6 +62,6 @@ services:
       - POSTGRES_DB=BigProjectDb
     restart: always
     volumes:
-      - ./app_data:/var/lib/postgresql/data
+      - ./BigProject/app_data:/var/lib/postgresql/data
     networks:
       - dev
