BP-7 Docker compose #7

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-﻿version: '3.4'
+version: '3.4'
 
 #Драйвер "bridge" создает виртуальную сеть между контейнерами и позволяет им общаться друг с другом, а также предоставляет контейнерам доступ к внешним сетевым ресурсам.
 
