--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,7 +1,7 @@
 name: main action
 on:
-  push:
-    branches: [ '**' ]
+#  push:
+#    branches: [ '**' ]
   pull_request:
     branches: [ main, development ]
 jobs:
