--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,20 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@reduxjs/toolkit": "^1.9.5",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"@types/jest": "^27.5.2",
-		"@types/node": "^16.18.23",
-		"@types/react": "^18.0.37",
-		"@types/react-dom": "^18.0.11",
 		"axios": "^1.3.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
 		"react-scripts": "5.0.1",
-		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -48,6 +39,14 @@
 		]
 	},
 	"devDependencies": {
+		"@reduxjs/toolkit": "^1.9.5",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.23",
+		"@types/react": "^18.0.37",
+		"@types/react-dom": "^18.0.11",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-config-standard-with-typescript": "^34.0.1",
@@ -59,6 +58,7 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unicorn": "^46.0.0",
-		"prettier": "^2.8.8"
+		"prettier": "^2.8.8",
+		"typescript": "^4.9.5"
 	}
 }
