--- a/react-app/package.json
+++ b/react-app/package.json
@@ -40,6 +40,7 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-syntax-flow": "^7.21.4",
+		"@babel/plugin-transform-react-jsx": "^7.21.5",
 		"@reduxjs/toolkit": "^1.9.5",
 		"@testing-library/dom": "^9.2.0",
 		"@testing-library/jest-dom": "^5.16.5",
@@ -49,6 +50,7 @@
 		"@types/node": "^16.18.23",
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-config-standard-with-typescript": "^34.0.1",
