--- a/aspnet-app/appsettings.json
+++ b/aspnet-app/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Server=localhost;Port=5432;Database=BigProjectDb; IntegratedSecurity=true;Pooling=true;"
+    "DefaultConnection": "User ID=postgres;Password=postgres;Server=localhost;Port=5432;Database=BigProjectDb; IntegratedSecurity=true;Pooling=true; Include Error Detail=true;"
   }
 }
